--- a/html/css/hnd.content.css
+++ b/html/css/hnd.content.css
@@ -81,7 +81,7 @@ span.rvts14
 }
 span.rvts15
 {
- color: #0000ff;
+ color: #000000;
 }
 span.rvts16
 {
@@ -116,6 +116,10 @@ p,ul,ol /* Paragraph Style */
  border-left: none;
  padding: 2px 0px 2px 0px;
  margin: 7px 0px 7px 0px;
+}
+.rvps5
+{
+ margin: 0px 0px 0px 24px;
 }
 /* ========== Lists ========== */
 .list0 {text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;}
